src/objects/Assignment_Rule__c.object
<CustomObject>
    <description>This object holds data for custom assignment rules, such as which object and if is active or not. Only 1 rule can be active per sObject.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Run_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Run Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>